--- a/users/templates/subrequest.html
+++ b/users/templates/subrequest.html
@@ -16,6 +16,7 @@
                                 <div class="row">
                                     
                                     <div class="col-sm-12 table-toolbar-right">
+                                        <a href="{% url 'export_techrequest' %}"> <button class="btn btn-primary my-2 my-sm-0" type="submit"><i class="fa fa-download fa-lg" aria-hidden="true"></i>&nbsp; &nbsp;Export</button></a>
                                         <div class="btn-group">
                                             <div class="form-group">
                                         <form class="form-inline my-2 my-lg-0" action="{% url 'subrequest'%}">
