--- a/users/templates/transactions.html
+++ b/users/templates/transactions.html
@@ -74,12 +74,12 @@
                                 <div class="row">
                                     
                                     <div class="col-sm-12 table-toolbar-right">
-                                        <button value="click" onclick="printDiv()" id="demo-btn-addrow" class="btn btn-mint"><i class="fa fa-print fa-lg"></i>&nbsp; &nbsp;Print</button>
-                                        <a href="{% url 'export_transaction_csv' customer.id %}"> <button class="btn btn-primary my-2 my-sm-0" type="submit"><i class="fa fa-download fa-lg" aria-hidden="true"></i>&nbsp; &nbsp;Export</button></a>
+                                        <button value="click" onclick="printDiv2()" id="demo-btn-addrow" class="btn btn-mint"><i class="fa fa-print fa-lg"></i>&nbsp; &nbsp;Print</button>
+                                        <a href="{% url 'export_watertransaction_csv' customer.id %}"> <button class="btn btn-primary my-2 my-sm-0" type="submit"><i class="fa fa-download fa-lg" aria-hidden="true"></i>&nbsp; &nbsp;Export</button></a>
                                     </div>
                                 </div>
                             </div>
-                            <div id="onlytable" class="table-responsive">
+                            <div id="onlytable2" class="table-responsive">
                                 <table class="table table-striped" style="border: 1px">
                                     <thead>
                                         <tr>
@@ -132,6 +132,20 @@
                         var a = window.open('', '', 'height=2000, width=2000');
                         a.document.write('<html> <title');
                         a.document.write('<body> <h1>Transactions<br>');
+                        a.document.write(divContents);
+                        a.document.write('</body></html>');
+                        a.document.close();
+                        a.print();
+                    }
+                </script>
+
+
+                <script>
+                    function printDiv2() {
+                        var divContents = document.getElementById("onlytable2").innerHTML;
+                        var a = window.open('', '', 'height=2000, width=2000');
+                        a.document.write('<html> <title');
+                        a.document.write('<body> <h1>Wter Buy Transactions<br>');
                         a.document.write(divContents);
                         a.document.write('</body></html>');
                         a.document.close();
