--- a/users/templates/Addmeternumber.html
+++ b/users/templates/Addmeternumber.html
@@ -18,7 +18,7 @@
                                             <div class="col-sm-12">
                                                 <div class="form-group">
                                                     <label class="control-label">Meter Number</label>
-                                                    <input type="text" class="form-control" name="Meternumber"> 
+                                                    <input type="number" class="form-control" name="Meternumber"> 
                                                 </div>
                                             </div>
                                             
