--- a/users/templates/add_other_payment.html
+++ b/users/templates/add_other_payment.html
@@ -34,7 +34,7 @@
                                             <div class="col-sm-12">
                                                 <div class="form-group">
                                                     <label class="control-label">Amount</label>
-                                                    <input type="number" class="form-control" name="amount">
+                                                    <input type="number" class="form-control" name="amount" pattern="[0-9]+">
                                                 </div>
                                             </div>
                                             
