--- a/users/templates/update_user.html
+++ b/users/templates/update_user.html
@@ -18,7 +18,7 @@
                                             <div class="col-sm-12">
                                                 <div class="form-group">
                                                     <label class="control-label">Current Phone</label>
-                                                    <input type="text" class="form-control" name="phonenumber" value={{update_num.phone}}> 
+                                                    <input type="number" class="form-control" name="phonenumber" value={{update_num.phone}}> 
                                                 </div>
                                             </div>
                                         </div>
