--- a/users/templates/Addnewproduct.html
+++ b/users/templates/Addnewproduct.html
@@ -26,13 +26,13 @@
                                             <div class="col-sm-6">
                                                 <div class="form-group">
                                                     <label class="control-label">Price</label>
-                                                    <input type="text" class="form-control" name="price">
+                                                    <input type="number" class="form-control" name="price">
                                                 </div>
                                             </div>
                                             <div class="col-sm-6">
                                                 <div class="form-group">
                                                     <label class="control-label">Discount</label>
-                                                    <input type="text" value="0" class="form-control" name="discount">
+                                                    <input type="number" value="0" class="form-control" name="discount">
                                                 </div>
                                             </div>
 
