--- a/users/templates/techreply.html
+++ b/users/templates/techreply.html
@@ -38,7 +38,7 @@
                                             <div class="col-sm-4">
                                                 <div class="form-group">
                                                     <label class="control-label">Technician Phone</label>
-                                                    <input type="text" class="form-control" name="tecphone"> 
+                                                    <input type="number" class="form-control" name="tecphone"> 
                                                 </div>
                                             </div>
                                             <div class="col-sm-4">
