--- a/users/templates/add_customer.html
+++ b/users/templates/add_customer.html
@@ -75,7 +75,8 @@
                                                     <input type="text" class="form-control" name="Cell"required>
                                                 </div>
                                             </div>
-                                            <div class="col-sm-6">
+                    
+                                            <div class="col-sm-4">
                                                 <div class="form-group">
                                                     <label class="control-label">Meter Number <b style="color:#38b3f5;"> (If customer is for inuma only) </b></label>
                                                     <select  name="Meternumber" class="js-example-basic-single2 form-control">
@@ -88,7 +89,17 @@
                                                     </select>  
                                                 </div>
                                             </div>
-                                             <div class="col-sm-6">
+                                            <div class="col-sm-4">
+                                                <div class="form-group">
+                                                    <label class="control-label">Customer type</label>
+                                                    <select class="form-control" name="ctype"required>
+                                                       <option value="">Select customer type</option> 
+                                                       <option value="Kiosk">Kiosk</option> 
+                                                       <option value="Normal">Normal</option> 
+                                                    </select>                                                
+                                              </div>
+                                            </div>
+                                             <div class="col-sm-4">
                                                 <div class="form-group">
                                                     <label class="control-label">Language</label>
                                                     <select class="form-control" name="Language"required>
@@ -96,7 +107,7 @@
                                                        <option value="English">English</option> 
                                                        <option value="Kinyarwanda">Kinyarwanda</option> 
                                                     </select>                                                
-                                            </div>
+                                              </div>
                                             </div>
                                             <div class="col-sm-12">
                                                  <div class="form-group">
