--- a/users/templates/dashboard.html
+++ b/users/templates/dashboard.html
@@ -131,8 +131,8 @@
 					                            </div>
 					                        </div>
 					                        <div class="media-body">
-										<p class="text-2x mar-no text-semibold">{{allsoldlitre|intcomma}}</p>
-					                            <p class="mar-no">All Sold litres</p>
+										<p class="text-2x mar-no text-semibold">{{allsoldlitre|intcomma}} Rwf</p>
+					                            <p class="mar-no">All Sold Water</p>
 					                        </div>
 					                    </div>
 					                </div>
