--- a/users/templates/Receipt.html
+++ b/users/templates/Receipt.html
@@ -72,7 +72,7 @@
                                     <tbody>
                                     {% for history in page_obj %}
                                     <tr>
-                                            <td>{{history.Customer.FirstName}} {{history.Customer.customerType}}</td>
+                                            <td>{{history.Customer.FirstName}} {{history.Customer.LastName}}</td>
                                             <td>{{history.Customer.user.phone}}</td>
                                             <td>{{history.Meternumber}}</td>
                                             <td>{{history.Amount|intcomma}} Rwf</td>
