--- a/users/templates/quotation.html
+++ b/users/templates/quotation.html
@@ -96,8 +96,10 @@
                     function printDiv() {
                         var divContents = document.getElementById("onlytable").innerHTML;
                         var a = window.open('', '', 'height=800, width=800');
-                        a.document.write('<html>');
-                        a.document.write('<body> <h1>Quotation<br>');
+                        a.document.write('<html> ');
+                        a.document.write('<body>');
+                        a.document.write('<img height=100px src="{% static "img/header.png" %}">');
+                        a.document.write('<h1>Quotation<br>');
                         a.document.write(divContents);
                         a.document.write('</body></html>');
                         a.document.close();
