delete subscription added

--- a/users/templates/new_subscriptions.html
+++ b/users/templates/new_subscriptions.html
@@ -66,17 +66,14 @@
                                             <td>{{sub.CustomerID.user.email}}</td>
                                             <td>{{sub.CustomerID.user.phone}}</td>
                                             <td>{{sub.Category.Title}}</td>
-
+                                            <td> 
                                             {% if sub.Category.Title|upper == "AMAZI" %}
-                                                    <td> 
                                                     <a class="btn-link" href={% url 'approve_sub' sub.id %}><button class="btn btn-primary">Approve</button></a>
-                                                    </td>
-
                                             {% else %}
-                                                    <td> 
                                                     <a class="btn-link" href={% url 'approvesubs' sub.id %}><button class="btn btn-primary">Approve</button></a>
-                                                    </td>
                                             {% endif %}
+                                            <a class="btn-link" onclick="return confirm('Are you sure you want to delete this subscription?')" href={% url 'delete_subscription' sub.id %}><button class="btn btn-danger">Delete</button></a>
+                                            </td>
                                     </tr>
                                     {% endfor %}
 
